--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,25 +1,41 @@
+{% load static %}
 <html>
     <head>
         <title>Clifford Gately</title>
+        
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        
+        
     </head>
     <body>
-        <div>
+        <div class="page-header">
             <h1><a href="/">Clifford Gately</a></h1>
         </div>
 
         <div>
             <p>Welcome to my website!</p>
-            <h2><a href="">About</a></h2>
-            <p>Marketing.</p>
+            <h2><a href="">Recent Posts</a></h2>
+            <p>Below are recent updates regarding my work.</p>
         </div>
 
-        {% for post in posts %}
-            <div>
-                <h2><a href="">{{ post.title }}</a></h2>
-                <p>{{ post.text|linebreaksbr }}</p>
-                <p>published: {{ post.published_date }}</p>
+        <div class="content container">
+                <div class="row">
+                    <div class="col-md-8">
+                        {% for post in posts %}
+                            <div class="post">
+                                <div class="date">      
+                                </div>
+                                <h2><a href="">{{ post.title }}</a></h2>
+                                <p>{{ post.text|linebreaksbr }}</p>
+                                <p>published: {{ post.published_date }}</p>
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
             </div>
-        {% endfor %}
 
     </body>
 </html>
