--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -28,6 +28,11 @@ h1, h2, h3, h4 {
     font-family: 'Times New Roman';
 }
 
+h5 {
+    font-family: "Times New Roman";
+    font-size: 36 px;
+}
+
 .date {
     color: #828282;
 }
